--- a/test/res/resource.yml
+++ b/test/res/resource.yml
@@ -1,14 +1,14 @@
 Buckets:
-  BucketName: cf:teststack:BucketName
-  BucketDomainName: cf:teststack:BucketDomainName
+  BucketName: $cf:teststack:BucketName
+  BucketDomainName: $cf:teststack:BucketDomainName
 
 Workgroups:
-  importFilters: cf:teststack:fooWorkgroup
-  metrics: cf:teststack:barWorkgroup
+  importFilters: $cf:teststack:fooWorkgroup
+  metrics: $cf:teststack:barWorkgroup
 
 SQS:
-  scheduler: cf:teststack:metricsScheduler
+  scheduler: $cf:teststack:metricsScheduler
 
 DB:
-  foo: ssm:/path/to/my/param
+  foo: $ssm:/path/to/my/param
   plain: something_plain
