--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cloudout",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Code generator for your AWS cloud resources.",
   "main": "lib/cloudout.js",
   "type": "module",
   "preferGlobal": true,
   "repository": "senor-coder/cloudout",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "c8 npm run test"
   },
   "keywords": [
     "cloudout",
@@ -25,18 +26,21 @@
     "@aws-sdk/client-cloudformation": "^3.9.0",
     "@aws-sdk/client-ssm": "^3.9.0",
     "argparse": "^2.0.1",
+    "chalk": "^4.1.0",
     "handlebars": "^4.7.7",
     "js-yaml": "^4.0.0",
+    "jsdiff": "^1.1.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/register": "^7.13.8",
+    "c8": "^7.6.0",
     "chai": "^4.3.4",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
-    "nyc": "^15.1.0"
+    "sinon": "^10.0.0"
   },
   "mocha": {
     "spec": "test"
