--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@aws-sdk/client-ssm": "^3.9.0",
     "argparse": "^2.0.1",
     "chalk": "^4.1.0",
+    "diff": "^5.0.0",
     "handlebars": "^4.7.7",
     "js-yaml": "^4.0.0",
-    "jsdiff": "^1.1.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
